[package]
name = "robot-vacuum"
version = "0.1.0"
edition = "2021"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "z"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.6.1", features = ["json", "macros"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.6", features = [
    "runtime-tokio-rustls",
    "any",
    "sqlite",
    "postgres",
    "json",
    "migrate",
    "macros",
    "chrono",
] }
chrono = { version = "0.4", features = ["serde"] }
