[package]
name = "robot-vacuum"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
lto = true
incremental = false
opt-level = "z"

[dependencies]
shuttle-shared-db = { version = "0.10.0", default-features = false, features = [
    "postgres",
    "sqlx",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.6.1", features = ["json", "macros"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
sqlx = { version = "0.6", features = [
    "any",
    "sqlite",
    "postgres",
    "json",
    "migrate",
    "macros",
    "chrono",
] }
chrono = { version = "0.4", features = ["serde"] }
shuttle-service = { version = "0.10.0", features = ["web-axum"] }
sync_wrapper = "0.1"
